<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest01var04.PracticalTest01Var04MainActivity" >

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:gravity="top"
        android:inputType="text" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:gravity="center"
        android:rowCount="4" >

        <Button
            android:id="@+id/doButton"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="3"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/doButton" />

        <Button
            android:id="@+id/miButton"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="2"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/miButton" />

        <Button
            android:id="@+id/solButton"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/solButton" />

        <Button
            android:id="@+id/doButton2"
            android:layout_column="03"
            android:layout_gravity="center"
            android:layout_row="0"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/doButton2" />
    </GridLayout>

    <Button
        android:id="@+id/navigateButton"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/navigateButton" />

</LinearLayout>